deploy/kustomize/traefik/backstage-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: backstage-reference-grant
  namespace: backstage
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: backstage
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backstage-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: debian-k3s-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - backstage.debian-k3s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backstage
      namespace: backstage
      port: 7007
      kind: Service
      weight: 100
