deploy/kustomize/traefik/chess-engine-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: chess-engine-api-reference-grant
  namespace: chess-engine-api
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: chess-engine-api
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chess-engine-api-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: debian-k3s-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - chess-engine-api.debian-k3s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: chess-engine-api
      namespace: chess-engine-api
      port: 8080
      kind: Service
      weight: 100
