deploy/kustomize/traefik/graphite-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: graphite-reference-grant
  namespace: graphite
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: graphite
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: graphite-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: debian-k3s-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - graphite.debian-k3s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: graphite
      namespace: graphite
      port: 8080
      kind: Service
      weight: 100
